[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bodymiscale"
version = "2026.5.6"
description = "Home Assistant custom integration for body composition tracking"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.14"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.14",
    "Topic :: Home Automation",
]
dependencies = ["homeassistant>=2026.5.0"]

[project.optional-dependencies]
dev = [
    "mypy==2.1.0",
    "pre-commit==4.6.0",
    "pylint==4.0.6",
    "pytest-cov",
    "pytest-homeassistant-custom-component",
    "ruff==0.15.20",
]

[tool.setuptools.packages.find]
include = ["custom_components*"]
exclude = ["tests*"]

# ============================================================
# RUFF CONFIGURATION
# ============================================================
[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W", "D", "SIM", "C4", "PGH", "RUF", "BLE"]
ignore = [
    "E501",
    "D202",
    "D107",
    "RUF002", # Intentional unicode chars in scientific docstrings
    "UP024",
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# ============================================================
# MYPY CONFIGURATION
# ============================================================
[tool.mypy]
python_version = "3.14"
show_error_codes = true
follow_imports = "silent"
ignore_missing_imports = true
strict_equality = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unreachable = true

# ============================================================
# PYTEST CONFIGURATION
# ============================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
addopts = "-rxf -x -v -l --tb=short --cov=./ --cov-report=xml"

# ============================================================
# COVERAGE CONFIGURATION
# ============================================================
[tool.coverage.run]
source = ["custom_components"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
skip_covered = true
show_missing = true

# ============================================================
# BANDIT CONFIGURATION
# ============================================================
[tool.bandit]
tests = [
    "B103",
    "B108",
    "B306",
    "B307",
    "B313",
    "B314",
    "B315",
    "B316",
    "B317",
    "B318",
    "B319",
    "B320",
    "B601",
    "B602",
    "B604",
    "B608",
    "B609",
]
quiet = true
format = "custom"
